routing/ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    metallb.universe.tf/address-pool: metallb-ip-pool
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
