routing/route-ab.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-app-ab
spec:
  parentRefs:
    - name: demo-app-gateway
  rules:
    # alpha to v1
    - matches:
        - path:
            type: PathPrefix
            value: /backend
          headers:
            - name: cookie
              type: RegularExpression
              value: ".*group=alpha.*"
      backendRefs:
        - name: backend-v1
          port: 3000

    # beta to v2
    - matches:
        - path:
            type: PathPrefix
            value: /backend
          headers:
            - name: cookie
              type: RegularExpression
              value: ".*group=beta.*"
      backendRefs:
        - name: backend-v2
          port: 3000

    # frontend page to default
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: frontend
          port: 80

    # Login/Register/Logout to v1
    - matches:
        - path:
            type: Exact
            value: /login
        - path:
            type: Exact
            value: /logout
        - path:
            type: Exact
            value: /register
      backendRefs:
        - name: backend-v1
          port: 3000
