routing/route-canary.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-app-canary
spec:
  parentRefs:
    - name: demo-app-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: frontend
          port: 80

    - matches:
        - path:
            type: Exact
            value: /login
        - path:
            type: Exact
            value: /logout
        - path:
            type: Exact
            value: /register
        - path:
            type: PathPrefix
            value: /backend

      backendRefs:
        - name: backend-v1
          port: 3000
          weight: 90
        - name: backend-v2
          port: 3000
          weight: 10
